[package]
name = "cloaker"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex-literal = "0.4"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1"
regex = "1"
url = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
time = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
